# valhallac

./: .gitignore  <main>  Cargo.toml  README.md  build.rs  check.vh  current_compiler_test.md  empty.out  test.vh  test_source  test_source-release.out  test_source.out  test_source.vh
.github/workflows/: rust.yml
.ideas/: __MAIN.vh
samples/: ability.vh  arith.vh  call_tree.vh  casting.vh  colon.vh  conditional.vh  constant_folding.vh  converting.vh  currying_infix.vh  declaration_v_test.vh  equ_solve.vh  fixity.vh  func_apl.vh  functions.vh  hello_someone.vh  hello_world.vh  hello_world_function.vh  indexed_set.vh  juxtaposition.vh  list.vh  mapping.vh  match.vh  moduels.vh  non-modules.vh  peano.vh  peano_implicit.vh  pi.vh  primes.vh  product_type.vh  raw_hello_world.vh  set_comp.vh  singleton.vh  singleton_return.vh  subsets.vh  syntax.vh  vect.vh
scripts/: graph.sh  inspect.sh
src/: bin.rs  err.rs  issue.rs  lib.rs  main.rs  site.rs
src/compiler/: block.rs  casts.rs  element.rs  instructions.rs  internal_functions.rs  marshal.rs  mod.rs  types.rs
src/syntax/: analyser.rs  ast.rs  err.rs  lexer.rs  location.rs  mod.rs  operators.rs  parser.rs  token.rs
src/syntax/analysis/: constant_fold.rs  mod.rs  type_balancer.rs  type_checker.rs  type_resolver.rs
static/: build.rs  read_version.rs
tests/: Cargo.toml  README.md  README.md.bak
tests/expect_fail/: bad_paren.vh  invalid_operations_1.vh  no_such_operator.vh
tests/expect_success/: arith_1.vh  arith_2.vh  arith_3.vh  auto_function.vh  io_1.vh  semi-colon.vh
tests/src/: main.rs
