[package]
name = "valhallac"
description = "Valhalla Language frontend, parser and  AST compiler."
homepage = "https://knutsen.co"
repository    = "https://github.com/Demonstrandum/valhalla"
documentation = "https://github.com/Demonstrandum/valhalla"
keywords = ["set-theory", "programming", "language", "parser", "compiler"]
categories = ["parser-implementations", "parsing", "encoding", "command-line-interface"]
#license = "GPL-3.0"
license-file = "LICENSE.md"
readme = "README.md"
version = "0.1.0"
authors = ["Demonstrandum <moi@knutsen.co>"]
edition = "2018"

[lib]
name = "valhallac"
path = "src/lib.rs"

[[bin]]
name = "valhallac"
path = "src/bin.rs"

[dependencies]
lazy_static = "1.3.0"
regex = "1"
unindent = "0.1.3"
snailquote = "0.2.0"
unicode-width = "0.1.5"
enum-primitive-derive = "^0.1"
num-traits = "^0.1"
colored = "1.8"
